Basic lexer looks to be in fully working order, next step is the shunting yard parser i think, infix -> postfix then a postfix evaluator, then the basic calculator should have working logic, just have to jump into scene builder to make it useable